[package]
name = "middle-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }   
