[package]
name = "middle-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }   
dashmap = "6.2.1"
anyhow = "1.0.102"
chrono = {
    version = "0.4.44",
    features = ["serde"]
}
futures = "0.3"
dotenvy = "0.15"
libsql = "0.9.30"
shuttle-turso = "0.57"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.13", features = ["json"] }
